Creating the Pet Events subpage and the list of Upcoming Pet-friendly Events.

--- a/Pet Events.html
+++ b/Pet Events.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Pet Events</title>
+    <title>Upcoming Pet-friendly Events</title>
     <style>
         /* Add your CSS styles here */
     </style>
 </head>
 <body>
-    <h1>Pet Events</h1>
+    <h1>Upcoming Pet-friendly Events</h1>
     <ul id="eventList"></ul>
 
     <script>
