Adding events to the Upcoming Pet-Friendly Eventsge

--- a/Pet Events.html
+++ b/Pet Events.html
@@ -30,7 +30,26 @@
                 "Location": "Good Dog Cafe, 2640 E Huntsville Rd, Fayetteville, AR",
                 "Brief Description": "Calling all Pugs (and Pug mixes)! We are having a Pug party at Good Dog Cafe from 3:00-4:30!...",
                 "Link": "https://www.experiencefayetteville.com/calendar/44-bring-your-dog/5472-calling-all-greyhounds-2"
+            },
+            {
+                "Event Name": "Lights of the Ozarks!",
+                "Date": "11/17/2023",
+                "Time": "6pm",
+                "Day of Week": "Friday",
+                "Location": "Historic Downtown Square, Fayetteville, AR",
+                "Brief Description": "The most treasured celebration of holiday lights in Northwest Arkansas, Lights of the Ozarks, will return to Fayetteville's Historic Downtown Square for the 2023 season!",
+                "Link": "https://www.experiencefayetteville.com/experience/lights-of-the-ozarks#can-i-bring-my-dog"
+            },
+            {
+                "Event Name": "Lighting of the Square!",
+                "Date": "11/18/2023",
+                "Time": "6pm",
+                "Day of Week": "Saturday",
+                "Location": "103 South Main Street, Bentoville, AR",
+                "Brief Description": "LIGHTS, We celebrate big as the Bentonville Parks & Rec team lights the Square for the holidays!",
+                "Link": "https://www.downtownbentonville.org/event/lights"
             }
+            
         ];
 
         // Get the <ul> element to display the event list
