Adding notes to the code to have the reference of the user story that this code is related

--- a/Pet Events.html
+++ b/Pet Events.html
@@ -1,3 +1,6 @@
+<! --Pet Events is the subpage, inside this subpages we will have more subpages, each will be the user story that we are deploying>
+<! --The code below is for the User story (610):As a pet owner, I want to see a list of upcoming pet-friendly events including their dates >
+
 <!DOCTYPE html>
 <html>
 <head>
