Changes to index.html and style.css to add story and task ids to the code

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Story #624 - Website Overview -->
+<!-- Task #798 - Create index page -->
 <html>
 <head>
     <title>PetPulse - Pet United</title>
@@ -12,6 +14,7 @@
             alt="PetPulse Logo">
             <h2>PetPulse</h2>
         </div>
+        <!-- Task #800 - Link section to other pages -->
         <nav>
             <a href="index.html">Home</a>
             <a href="About US.html">About Us</a>
@@ -27,6 +30,7 @@
         <h1>Welcome to PetPulse<h1><br>
         <img src="https://www.cdc.gov/healthypets/images/covid/dog-and-cat.jpg" width="500" height="200">
         </center><br>
+       <!-- Task #799 - Create Welcome message -->
         <p>We are delighted to have you here!</p><br>
         <p>We want to provide the pet community with an online platform for resources, connections, and memorable pet experiences.<br><br>
         So please enjoy your time with us and feel free to reach for additional support as you embark your Pet-venture.</p>
