--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <!-- Task #800 - Link section to other pages -->
         <nav>
             <a href="index.html">Home</a>
-            <a href="About US.html">About Us</a>
+            <a href="About_US.html">About Us</a>
             <a href="#">Pet Education</a>
-            <a href="Pet Events.html">Pet Events</a>
+            <a href="Pet_Events.html">Pet Events</a>
             <a href="#">Pet Services</a>
             <a href="#">Pet Social</a>
             <a href="#">Contact</a>
