--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Task #800 - Link section to other pages -->
         <nav>
             <a href="index.html">Home</a>
-            <a href="About_US.html">About Us</a>
+            <a href="About_Us.html">About Us</a>
             <a href="#">Pet Education</a>
             <a href="Pet_Events.html">Pet Events</a>
             <a href="#">Pet Services</a>
