--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="Pet_Events.html">Pet Events</a>
             <a href="#">Pet Services</a>
             <a href="#">Pet Social</a>
-            <a href="#">Contact</a>
+            <a href="Inquiry.html">Contact</a>
         </nav>
     </header>
     <div class="container">
