--- a/About_Us.html
+++ b/About_Us.html
@@ -1,3 +1,33 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>About Us</title>
+    <style>
+        .person {
+            margin: 20px;
+            padding: 20px;
+            border: 1px solid #ccc;
+            width: 300px;
+            display: inline-block;
+        }
+        .image {
+            width: 100%;
+            max-width: 200px;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+    <h1>About Us</h1>
+
+    <!-- Person 1 -->
+    <div class="person">
+        <img class="image" src="george_pic.jpg" alt="Person 1">
+        <h2>George Lim</h2>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/cylim95/">LinkedIn Profile</a></p>
+        <p>I currently don't have any pet, but I will have a dog and a cat in the future.</p>
+    </div>
+
 <!--About US Hannala Profile-->
 <html lang="en">
 <head>
