--- a/About_Us.html
+++ b/About_Us.html
@@ -28,20 +28,32 @@
         <p>I currently don't have any pet, but I will have a dog and a cat in the future.</p>
     </div>
 
-<!--About US Hannala Profile-->
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hannala Mattar</title>
+    <title>About Us</title>
+    <style>
+        .person {
+            margin: 20px;
+            padding: 20px;
+            border: 1px solid #ccc;
+            width: 300px;
+            display: inline-block;
+        }
+        .image {
+            width: 100%;
+            max-width: 200px;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hannala Mattar</h1>
-    
-    <h2>LinkedIn</h2>
-    <p><a href="https://www.linkedin.com/in/hannalamattar" target="_blank">www.linkedin.com/in/hannalamattar</a></p>
-    
-    <h2>Pet Story</h2>
-    <p>Although I've always had a deep love for dogs, my busy schedule currently doesn't allow me the time and attention they deserve. However, I've been making plans and preparations, and in the near future, I'm excited to welcome a sweet Doodle Poodle into my life, ready to embark on a journey of companionship and wagging tails!</p>
-</body>
-</html>
+    <h1>About Us</h1>
+
+    <!-- Person 2 -->
+    <div class="person">
+        <img class="image" src="Hannala.jpg" alt="Person 2">
+        <h2>Hannala Mattar</h2>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/hannalamattar">LinkedIn Profile</a></p>
+        <p>Although I've always had a deep love for dogs, my busy schedule currently doesn't allow me the time and attention they deserve. However, I've been making plans and preparations, and in the near future, I'm excited to welcome a sweet Doodle Poodle into my life, ready to embark on a journey of companionship and wagging tails!</p>
+    </div>
