adding link to Pet Education page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="About_Us.html">About Us</a>
-            <a href="#">Pet Education</a>
+            <a href="Pet_Education.html">Pet Education</a>
             <a href="Pet_Events.html">Pet Events</a>
             <a href="#">Pet Services</a>
             <a href="#">Pet Social</a>
