updates heading info

--- a/Pet_Education.html
+++ b/Pet_Education.html
@@ -9,6 +9,10 @@
 
 <head>
     <title>Pet Education</title>
+    <meta name="description" content="">
+    <meta name="robots" content="INDEX,FOLLOW">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -30,7 +34,7 @@
             <a href="Inquiry.html">Contact</a>
         </nav>
     </header>
-    
+
     <h1>Welcome to Pet Education</h1>
 
 
