Slight changes in names

--- a/pet_services_StoreInfo.html
+++ b/pet_services_StoreInfo.html
@@ -7,9 +7,9 @@
         
     <style>
         div {
-        background-color: lightgrey;
+        background-color: rgb(171, 164, 164);
         width: 300px;
-        border: 15px solid green;
+        border: 15px solid rgb(15, 171, 219);
         padding: 50px;
         margin: 20px;
         }
@@ -38,9 +38,9 @@
              {
                 "Store Name" : "Whole Pet",
                 "Address": "Springdale: 5320 W Sunset Ave Ste 173 Springdale, AR 72762 \n Fayetteville: 2423 N. College Ave",
-                "Contact": "Springdale: 479-419-4993 \n Fayetteville:479-249-6108 \n",
+                "Contact": "Springdale: 479-419-4993, Fayetteville:479-249-6108 \n",
                 "Services": "Pet Stores, Pet Groomers, Pet Training",
-                "Hours of Operation" : "Mon 10:00 AM - 6:00 PM \n Tue 10:00 AM - 6:00 PM \n \ Wed 9:00 AM - 7:00 PM \n   \ Thu 9:00 AM - 7:00 PM \n   \ Fri9:00 AM - 7:00 PM \n   \
+                "Hours of Operation" : "Mon 10:00 AM - 6:00 PM \n Tue 10:00 AM - 6:00 PM \n \ Wed 9:00 AM - 7:00 PM \n   \ Thu 9:00 AM - 7:00 PM \n   \ Fri 9:00 AM - 7:00 PM \n   \
                 Sat 9:00 AM - 7:00 PM \n   \
                 Sun 12:00 PM - 5:00 PM \n",
                 "Visit Website": "https://www.wholepetpros.com"
@@ -56,7 +56,7 @@
                 Contact: ${store["Contact"]}<br>
                 Services: ${store["Services"]}<br>
                 Hours of Operation: ${store["Hours of Operation"]}
-                <a href="${store["Visit Website"]}"> More Info</a>`;
+                <a href="${store["Visit Website"]}"> Visit the Website </a>`;
             StoresList.appendChild(listItem);
              });
            </script>
