Changes in code for proper alignment

--- a/About_Us.html
+++ b/About_Us.html
@@ -6,9 +6,16 @@
         .person {
             margin: 20px;
             padding: 20px;
-            border: 1px solid #ccc;
+            border: 1px solid black;
             width: 300px;
             display: inline-block;
+            border: 1px solid black;
+            background-color: rgb(157, 228, 236);
+            padding-top: 25px;
+            padding-right: 30px;
+            padding-bottom: 25px;
+            padding-left: 50px;
+            box-sizing: content-box;
         }
         .image {
             width: 100%;
@@ -36,4 +43,14 @@
         <h2>Hannala Mattar</h2>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/hannalamattar">LinkedIn Profile</a></p>
         <p>Although I've always had a deep love for dogs, my busy schedule currently doesn't allow me the time and attention they deserve. However, I've been making plans to soon have a sweet Doodle Poodle into my life!</p>
+    </div>
+
+    <!-- Person 3 -->
+    <div class="person">
+        <img class="image" src="" alt="Person 2">
+        <h2>Dhruvi Bhatt</h2>
+        <p>LinkedIn: <a href="">LinkedIn Profile</a></p>
+        <p>In the past, I owned six budgies years ago. They were very adorable, enjoyed chirping, flying around the room, often perching on my shoulder or head and fight a lot as well.
+            Despite my fondness for birds, I’ve always desired to have a dog or cat but haven’t had the chance yet and eagerly await the day I can welcome one into my home.
+            Owning a pet, whether it’s a bird, dog, or cat, is a gratifying experience. Pets offer companionship, affection, amusement, and can alleviate stress and anxiety. </p>
     </div>
