--- a/pet_services_StoreInfo.html
+++ b/pet_services_StoreInfo.html
@@ -45,11 +45,12 @@
                 "Address": "4327 S Pleasant Crossing Blvd Ste E Rogers, AR 72756",
                 "Contact": "479-636-0526",
                 "Services": "Pet Store",
-                "Hours of Operation": "Mon 9:00 AM - 9:00 PM\n   \
-                Tue 9:00 AM - 9:00 PM\n  \
-                Wed 9:00 AM - 9:00 PM\n   \
-                Thu 9:00 AM - 9:00 PM\n  \
-                Fri 9:00 AM - 9:00 PM\n",
+                "Hours of Operation": "<br>"+
+                "Mon 9:00 AM - 9:00 PM<br>" +
+                "Tue 9:00 AM - 9:00 PM<br>" +
+                 "Wed 9:00 AM - 9:00 PM<br>"+
+                "Thu 9:00 AM - 9:00 PM<br>"+
+                "Fri 9:00 AM - 9:00 PM<br>",
                 "Visit Website": "https://www.petsuppliesplus.com"
              },
              {
@@ -57,13 +58,14 @@
                 "Address": "Springdale: 5320 W Sunset Ave Ste 173 Springdale, AR 72762 \n Fayetteville: 2423 N. College Ave",
                 "Contact": "Springdale: 479-419-4993, Fayetteville:479-249-6108 \n",
                 "Services": "Pet Stores, Pet Groomers, Pet Training",
-                "Hours of Operation" : "Mon 10:00 AM - 6:00 PM\n  \
-                Tue 10:00 AM - 6:00 PM\n  \
-                Wed 9:00 AM - 7:00 PM\n   \
-                Thu 9:00 AM - 7:00 PM\n   \
-                Fri 9:00 AM - 7:00 PM\n   \
-                Sat 9:00 AM - 7:00 PM\n   \
-                Sun 12:00 PM - 5:00 PM\n",
+                "Hours of Operation" : "<br>"+
+                "Mon 10:00 AM - 6:00 PM<br>"+ 
+                "Tue 10:00 AM - 6:00 PM<br>"+
+                "Wed 9:00 AM - 7:00 PM<br>" +
+                "Thu 9:00 AM - 7:00 PM<br>" +
+                "Fri 9:00 AM - 7:00 PM<br>" +
+                "Sat 9:00 AM - 7:00 PM<br>" +
+                "Sun 12:00 PM - 5:00 PM<br>",
                 "Visit Website": "https://www.wholepetpros.com"
 
              }
