Changes to About Us page - adding header

--- a/About_Us.html
+++ b/About_Us.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About Us</title>
-    <style>
+    <title>PetPulse - About Us</title>
+<!--    <style>
         .person {
             margin: 20px;
             padding: 20px;
@@ -23,6 +23,9 @@
             height: auto;
         }
     </style>
+-->
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header>
