Added George's story and task numbers

--- a/About_Us.html
+++ b/About_Us.html
@@ -27,7 +27,7 @@
 <body>
     <h1>About Us</h1>
 
-    <!-- Person 1 -->
+    <!-- Task #794 - George Information - About Us-->
     <div class="person">
         <img class="image" src="george_pic.jpg" alt="Person 1">
         <h2>George Lim</h2>
