--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             alt="PetPulse Logo">
             <h2>PetPulse</h2>
         </div>
-        <!-- Task #800 - Link section to other pages -->
+        <!-- Task #800 and #815 - Link section to other pages -->
         <nav>
             <a href="index.html">Home</a>
             <a href="About_Us.html">About Us</a>
