--- a/Inquiry.html
+++ b/Inquiry.html
@@ -1,4 +1,4 @@
-<!-- Inquiry Form Code: -->
+<!-- Story #625 - An inquiry form -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -15,6 +15,8 @@
             document.getElementById('confirmation-message').style.display = 'block';
         }
     </script>
+
+<!-- Task #816 and #817 - Create Input Boxes and Button -->
 </head>
 <body>
     <h1>Contact Us</h1>
@@ -33,6 +35,7 @@
         </form>
     </div>
 
+<!-- Task #818 - Confirmation Message -->
     <div id="confirmation-message" style="display: none;">
         <p>Thank you for your inquiry. We have received your message.</p>
     </div>
