Changes to CSS file to add more format options

--- a/About_Us.html
+++ b/About_Us.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>PetPulse - About Us</title>
-<!--    <style>
+    <style>
         .person {
             margin: 20px;
             padding: 20px;
@@ -23,7 +23,6 @@
             height: auto;
         }
     </style>
--->
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
