Changes to About Us page with Marco Monge details

--- a/About_Us.html
+++ b/About_Us.html
@@ -54,8 +54,6 @@
         <p>I currently don't have any pet, but I will have a dog and a cat in the future.</p>
     </div>
 
-
-
     <!-- Person 2 -->
     <div class="person">
         <img class="image" src="Hannala_pic.jpg" alt="Person 2">
@@ -66,10 +64,24 @@
 
     <!-- Person 3 -->
     <div class="person">
-        <img class="image" src="" alt="Person 2">
+        <img class="image" src="" alt="Person 3">
         <h2>Dhruvi Bhatt</h2>
         <p>LinkedIn: <a href="">LinkedIn Profile</a></p>
         <p>In the past, I owned six budgies years ago. They were very adorable, enjoyed chirping, flying around the room, often perching on my shoulder or head and fight a lot as well.
             Despite my fondness for birds, I’ve always desired to have a dog or cat but haven’t had the chance yet and eagerly await the day I can welcome one into my home.
             Owning a pet, whether it’s a bird, dog, or cat, is a gratifying experience. Pets offer companionship, affection, amusement, and can alleviate stress and anxiety. </p>
     </div>
+
+    <!-- Task #793 - Marco Information - About Us-->
+    <!-- Person 4 -->
+    <div class="person">
+        <img class="image" src="MarcoMonge.jpeg" alt="Person 4">
+        <h2>Marco Monge</h2>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/markomonge/">LinkedIn Profile</a></p>
+        <p>I had so many different types of pets from reptiles (snakes) to dogs (beagels) and fishes (too many to list) over the years. 
+            I don't currently own a pet and decided to join this community with the intent to share my experiences and lessons learned with some other pet friendly families. </p>
+    </div>
+
+
+
+    
