--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="About_Us.html">About Us</a>
             <a href="Pet_Education.html">Pet Education</a>
             <a href="Pet_Events.html">Pet Events</a>
-            <a href="#">Pet Services</a>
+            <a href="pet_services_StoreInfo.html">Pet Services</a>
             <a href="#">Pet Social</a>
             <a href="Inquiry.html">Contact</a>
         </nav>
