Updated About Us info-Pic with linkedIn Profile

--- a/About_Us.html
+++ b/About_Us.html
@@ -63,10 +63,11 @@
     </div>
 
     <!-- Person 3 -->
+    <!-- Task # 795 Dhruvi's Info- About Us-->
     <div class="person">
-        <img class="image" src="" alt="Person 3">
+        <img class="image" src="Dhruvi.jpeg" alt="Person 3">
         <h2>Dhruvi Bhatt</h2>
-        <p>LinkedIn: <a href="">LinkedIn Profile</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/dhruvi-b-8602981b1/">LinkedIn Profile</a></p>
         <p>In the past, I owned six budgies years ago. They were very adorable, enjoyed chirping, flying around the room, often perching on my shoulder or head and fight a lot as well.
             Despite my fondness for birds, I’ve always desired to have a dog or cat but haven’t had the chance yet and eagerly await the day I can welcome one into my home.
             Owning a pet, whether it’s a bird, dog, or cat, is a gratifying experience. Pets offer companionship, affection, amusement, and can alleviate stress and anxiety. </p>
