Adding Task number for my info on About US page

--- a/About_Us.html
+++ b/About_Us.html
@@ -54,6 +54,7 @@
         <p>I currently don't have any pet, but I will have a dog and a cat in the future.</p>
     </div>
 
+    <!-- Task #797- Hannala Info - About Us-->
     <!-- Person 2 -->
     <div class="person">
         <img class="image" src="Hannala_pic.jpg" alt="Person 2">
