adds pic and updates about us

--- a/About_Us.html
+++ b/About_Us.html
@@ -84,6 +84,17 @@
             I don't currently own a pet and decided to join this community with the intent to share my experiences and lessons learned with some other pet friendly families. </p>
     </div>
 
+    <!-- Task #796 - Rachel Information - About Us-->
+    <!-- Person 5 -->
+    <div class="person">
+        <img class="image" src="rachel_pic.jpg" alt="Person 5">
+        <h2>Rachel Corbell</h2>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/rachel-corbell-fort-smith/">LinkedIn Profile</a></p>
+        <p>I love pets and believe they bring a lot of love and joy into our lives. 
+            My first three dogs were retired racing greyhounds and they passed away this year; my husband and I adopted them as seniors, so we knew we wouldn't have as long with them. 
+            Now we are proud pup parents to an Italian Greyhound puppy named Elvin (pictured above) whose lively energy will keep us entertained for years to come. </p>
+    </div>
+
 
 
     
