Changes to Pet_Events - Adding Event Planner resources sub page and updating style for table - User Story 632

--- a/Pet_Events.html
+++ b/Pet_Events.html
@@ -87,5 +87,8 @@
             eventList.appendChild(listItem);
         });
     </script>
+
+    <br><br><h2><a href="Pet_Events_EventPlanner.html">Event Planner Resources</a></h2>
+
 </body>
 </html>
