Completed the Create Playdate Event story

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             alt="PetPulse Logo">
             <h2>PetPulse</h2>
         </div>
-        <!-- Task #800 and #815 - Link section to other pages -->
+        <!-- Task #800, #815 and #994 - Link section to other pages -->
         <nav>
             <a href="index.html">Home</a>
             <a href="About_Us.html">About Us</a>
             <a href="Pet_Education.html">Pet Education</a>
             <a href="Pet_Events.html">Pet Events</a>
             <a href="pet_services_StoreInfo.html">Pet Services</a>
-            <a href="#">Pet Social</a>
+            <a href="Pet_Social.html">Pet Social</a>
             <a href="Inquiry.html">Contact</a>
         </nav>
     </header>
