Adding one user story to our subpage Pet Education - User story #619

--- a/Pet_Education.html
+++ b/Pet_Education.html
@@ -59,3 +59,23 @@
 </body>
 
 </html>
+
+<!-- Story: 619 Pets Training content (HM) -->
+<!-- Task: 973-974 -->
+
+<h2>Pets Training content</h2>
+    <p>Expand you knowledge accessing training videos that will help you to teach your pet new tricks:</p>
+    <ul>
+        <li><a href="https://www.youtube.com/user/zakgeorge21">Dog Training Revolution</a></li>
+        <li><a href="https://www.youtube.com/watch?v=qP2UFCnHpd0"> Dog Tricks Easier than you Think</a></li>
+        <li><a href="https://www.youtube.com/watch?v=2h9VqeC6n50">5 Cat Tricks in 10 minutes</a></li>
+        <li><a href="https://www.youtube.com/user/TrainingPositive">Training Positive</a></li>
+        <li><a href="https://www.youtube.com/user/BirdTricks">Bird Tricks</a></li>
+        <li><a href="https://www.youtube.com/watch?v=PS8sTLqKfA8">How to Train your Puppy  in 1 Day</a></li>
+        <li><a href="https://www.everydogaustin.org/resources?gad=1&gclid=CjwKCAjwnOipBhBQEiwACyGLukp6Jd0RVzxwb7h40Zwvzwt4aOTrTXMa0cvyhPbVw1RDr171aYg5PhoCJNMQAvD_BwE">Dog Trainning resource</a></li>
+        <li><a href="https://petfriendlybox.com/resource-center/tricks-to-teach-your-dog">Better behavior</a></li>
+        
+    </ul>
+</body>
+</html>
+
