Adds sections for Pet Pros + Cons and Pet Insurance Providers

--- a/Pet_Education.html
+++ b/Pet_Education.html
@@ -76,6 +76,56 @@
         <li><a href="https://petfriendlybox.com/resource-center/tricks-to-teach-your-dog">Better behavior</a></li>
         
     </ul>
+
+
+
+<!-- Story: 616 Pets Pros and Cons Section -->
+<!-- Task: 1014-1015 -->
+
+<h2>Pet Pros and Cons Section</h2>
+<div class="pros-and-cons-container">
+    <div class="pros">
+        <h3>Pet Pros</h3>
+        <ul>
+            <li>Emotional Support: Pets provide unconditional love and comfort, helping to reduce stress and anxiety.</li>
+            <li>Companionship: Pets make great companions and can alleviate feelings of loneliness.</li>
+            <li>Physical Activity: Owning a pet encourages regular exercise through walks and playtime.</li>
+            <li>Teaches Responsibility: Taking care of a pet instills a sense of responsibility in owners.</li>
+            <li>Safety: Some pets, like dogs, can provide protection and alert owners to potential dangers.</li>
+            <li>Social Interaction: Owning a pet can lead to social interactions with other pet owners.</li>
+            <li>Unconditional Affection: Pets don't judge and offer unwavering affection.</li>
+            <li>Health Benefits: Studies show that pet ownership can lead to improved mental and physical health.</li>
+        </ul>
+    </div>
+    <div class="cons">
+        <h3>Pet Cons</h3>
+        <ul>
+            <li>Time Commitment: Pets require time for feeding, grooming, exercise, and attention.</li>
+            <li>Financial Responsibility: Pet ownership involves expenses for food, vet care, and other essentials.</li>
+            <li>Allergies: Some individuals may be allergic to pet dander.</li>
+            <li>Shedding: Pets, especially dogs and cats, may shed, leading to additional cleaning.</li>
+            <li>Damage to Belongings: Pets can unintentionally damage furniture, shoes, or other items.</li>
+            <li>Health Concerns: Owners need to address pet health issues and possible emergencies.</li>
+            <li>Travel Restrictions: Pet owners may have limited travel options due to pet care responsibilities.</li>
+            <li>Noise and Disruptions: Some pets may be noisy and disrupt daily routines.</li>
+        </ul>
+    </div>
+</div>
+
+<style>
+    .pros-and-cons-container {
+        display: flex;
+        justify-content: space-between;
+    }
+    .pros,
+    .cons {
+        flex: 1;
+        border: 1px solid #ccc;
+        padding: 10px;
+        margin: 5px;
+    }
+</style>
+
 </body>
 </html>
 
