--- a/index.html
+++ b/index.html
@@ -210,5 +210,20 @@
 
         
         </article>
+
+<!-- Story: 705 Emergency Contact -->
+<!-- Task: 1104-1105-1106 -->
+
+ <!-- Start of Emergency Contact Provider Section -->
+    <!-- Divider -->
+    <hr>
+
+    <!-- Footnote -->
+     <div class="footnote">
+       <p>If you need urgent advice for your pet's emergency situation, click the button below to speak with a veterinarian.</p>
+        <center><a href="tel:219-869-0097" class="cta-button">Speak with a Veterinarian</a></center>
+    </div>
+    <!-- End of Emergency Contact Provider Section -->
+
 </body>
 </html>
