--- a/About_Us.html
+++ b/About_Us.html
@@ -40,7 +40,7 @@
             <a href="Pet_Education.html">Pet Education</a>
             <a href="Pet_Events.html">Pet Events</a>
             <a href="pet_services_StoreInfo.html">Pet Services</a>
-            <a href="#">Pet Social</a>
+            <a href="Pet_Social.html">Pet Social</a>
             <a href="Inquiry.html">Contact</a>
         </nav>
     </header>
@@ -95,6 +95,18 @@
             Now we are proud pup parents to an Italian Greyhound puppy named Elvin (pictured above) whose lively energy will keep us entertained for years to come. </p>
     </div>
 
+<!-- Story: 705 Emergency Contact -->
+<!-- Task: 1104-1105-1106 -->
 
+ <!-- Start of Emergency Contact Provider Section -->
+    <!-- Divider -->
+    <hr>
 
-    
+    <!-- Footnote -->
+     <div class="footnote">
+       <p>If you need urgent advice for your pet's emergency situation, click the button below to speak with a veterinarian.</p>
+        <center><a href="tel:219-869-0097" class="cta-button">Speak with a Veterinarian</a></center>
+    </div>
+    <!-- End of Emergency Contact Provider Section -->
+</body>
+</html>
