Adjusted user story 621

--- a/Pet_Education.html
+++ b/Pet_Education.html
@@ -146,7 +146,7 @@
 </head>
 <body>
 
-    <h1>Learn About Pet-Friendly Legal Rights</h1>
+    <h1>Learn About Pet Legal Rights</h1>
     <p>As a pet owner, it's essential to understand your legal rights related to your pets.</p>
     
     <h3>Search for Legal Rights by Location</h3>
