User Story- 791 tasks-1194 & 1195 added

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
                 <li><a href="Pet_Social.html">Pet Social</a></li>
                 <li><a href="Inquiry.html">Contact</a></li>
+                <li><a href="SignIn.html">Sign In</a></li>
+                <li><a href="sign_up.html">Sign Up</a></li>
             </ul>
         </nav>
         
