--- a/sign_up.html
+++ b/sign_up.html
@@ -1,16 +1,27 @@
+<!--------User story:791 Task# 1195   (DB)------------------->
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f0f0f0;
+            background-image: image("https://www.bing.com/images/search?view=detailV2&ccid=ETnT3kyh&id=3BEAD34F591769EA8B11B7B595AB742345B02890&thid=OIP.ETnT3kyhZsNmn7DXGHlW2gHaDt&mediaurl=https%3a%2f%2fwallpapercave.com%2fwp%2fwp2447036.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.1139d3de4ca166c3669fb0d7187956da%3frik%3dkCiwRSN0q5W1tw%26pid%3dImgRaw%26r%3d0&exph=4500&expw=9000&q=generate+a+pet+ai+image+for+a+background&simid=608016577697511500&FORM=IRPRST&ck=BEBD8DF38051492F03D46244F983A62C&selectedIndex=58&ajaxhist=0&ajaxserp=0");
+            background-size: cover;
+            background-position: center;
+        }
+        h1 {
+            display: flex;
+            flex-direction: column;
+            color: rgb(247, 156, 45);
         }
         form {
             display: flex;
@@ -44,6 +55,7 @@
     </style>
 </head>
 <body>
+    <div> <h1> Sign Up Now!</h1></div>
     <form id="signupForm">
         <input type="text" id="username" placeholder="Username" required>
         <input type="email" id="email" placeholder="Email" required>
