--- a/SignIn.html
+++ b/SignIn.html
@@ -1,6 +1,9 @@
+<!----- User Story:791 Task# 1194---------- (DB)------------->
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: Arial, sans-serif;
