--- a/SignIn.html
+++ b/SignIn.html
@@ -6,22 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
+            width: 100%;
             height: 100vh;
-            background-color: #f0f0f0;
+            background-image: linear-gradient(rgba(69, 69, 114, 0.8), rgba(69,69,114, 0.8)), url(Bg.jpg);
+            background-size: cover;
+            background-position: center;
         }
+        h1 {
+            display: flex;
+            flex-direction: column;
+            color: rgb(247, 147, 17);
+        }
+
         form {
             display: flex;
             flex-direction: column;
             width: 100%;
             max-width: 300px;
             padding: 20px;
-            border: 1px solid #ccc;
+            border: 2px solid #111111;
             border-radius: 5px;
             background-color: #fff;
         }
@@ -47,6 +57,7 @@
     </style>
 </head>
 <body>
+    <h1>Log In Now!</h1>
     <form id="loginForm">
         <input type="email" id="email" placeholder="Email" required>
         <input type="password" id="password" placeholder="Password" required>
