--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <title>PetPulse - Pet United</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!-- <meta name="description" content=""> -->
-    <!-- <meta name="robots" content="INDEX,FOLLOW">
-    <meta content="width=device-width, initial-scale=1" name="viewport"> -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 <body>
@@ -37,6 +34,7 @@
 
                 <li><a href="Pet_Social.html">Pet Social</a></li>
                 <li><a href="Inquiry.html">Contact</a></li>
+                <!------- User Story: 791 Tasks:1194 1195---- (DB)---------------------------->
                 <li><a href="SignIn.html">Sign In</a></li>
                 <li><a href="sign_up.html">Sign Up</a></li>
             </ul>
