--- a/sign_up.html
+++ b/sign_up.html
@@ -13,8 +13,9 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            width: 100%;
             height: 100vh;
-            background-image: image("https://www.bing.com/images/search?view=detailV2&ccid=ETnT3kyh&id=3BEAD34F591769EA8B11B7B595AB742345B02890&thid=OIP.ETnT3kyhZsNmn7DXGHlW2gHaDt&mediaurl=https%3a%2f%2fwallpapercave.com%2fwp%2fwp2447036.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.1139d3de4ca166c3669fb0d7187956da%3frik%3dkCiwRSN0q5W1tw%26pid%3dImgRaw%26r%3d0&exph=4500&expw=9000&q=generate+a+pet+ai+image+for+a+background&simid=608016577697511500&FORM=IRPRST&ck=BEBD8DF38051492F03D46244F983A62C&selectedIndex=58&ajaxhist=0&ajaxserp=0");
+            background-image: linear-gradient(rgba(69, 69, 114, 0.8), rgba(69,69,114, 0.8)), url(bg1.jpg);
             background-size: cover;
             background-position: center;
         }
@@ -26,18 +27,20 @@
         form {
             display: flex;
             flex-direction: column;
-            width: 100%;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            width: 90%;
+            height: 200px;
             max-width: 300px;
             padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+            border: 2px solid #1b1515;
+            border-radius: 15px;
             background-color: #fff;
         }
         input {
             margin-bottom: 10px;
             padding: 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
+            border-radius: 2px;
+            border: 2px solid #ccc;
         }
         button {
             padding: 10px;
@@ -60,6 +63,8 @@
         <input type="text" id="username" placeholder="Username" required>
         <input type="email" id="email" placeholder="Email" required>
         <input type="password" id="password" placeholder="Password" required>
+    
+        <br>
         <button type="submit">Sign Up</button>
     </form>
 
