linked nav bar to all other pages

--- a/Inquiry.html
+++ b/Inquiry.html
@@ -34,15 +34,25 @@
         
         <!-- Task #800, #815 and #994 - Link section to other pages -->
 
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="About_Us.html">About Us</a>
-            <a href="Pet_Education.html">Pet Education</a>
-            <a href="Pet_Events.html">Pet Events</a>
-            <a href="pet_services_StoreInfo.html">Pet Services</a>
-            <a href="Pet_Social.html">Pet Social</a>
-            <a href="Inquiry.html">Contact</a>
-        </nav>
+        <!-- Creating drop down menu for user story#654 (DB)-->
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="About_Us.html">About Us</a></li>
+            <li><a href="Pet_Education.html">Pet Education</a></li>
+            <li><a href="Pet_Events.html">Pet Events</a></li>
+            <li><a href="pet_services_StoreInfo.html">Pet Services</a>
+                <ul>
+                    <li><a href="service_reviews.html">Service Reviews</a></li>
+                </ul>
+            </li>
+
+            <li><a href="Pet_Social.html">Pet Social</a></li>
+            <li><a href="Inquiry.html">Contact</a></li>
+            <!------- User Story: 791 Tasks:1194 1195---- (DB)----Linked to other pages------------------------>
+            <li><a href="SignIn.html">Sign In</a></li>
+            <li><a href="sign_up.html">Sign Up</a></li>
+        </ul>
+    </nav>
         
 
     </header>
