--- a/sign_up.html
+++ b/sign_up.html
@@ -56,7 +56,30 @@
             }
         }
     </style>
+
+<nav>
+        <!-- Creating drop down menu for user story#654 (DB)-->
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="About_Us.html">About Us</a></li>
+            <li><a href="Pet_Education.html">Pet Education</a></li>
+            <li><a href="Pet_Events.html">Pet Events</a></li>
+            <li><a href="pet_services_StoreInfo.html">Pet Services</a>
+                <ul>
+                    <li><a href="service_reviews.html">Service Reviews</a></li>
+                </ul>
+            </li>
+
+            <li><a href="Pet_Social.html">Pet Social</a></li>
+            <li><a href="Inquiry.html">Contact</a></li>
+            <!------- User Story: 791 Tasks:1194 1195---- (DB)----Linked to other pages------------------------>
+            <li><a href="SignIn.html">Sign In</a></li>
+            <li><a href="sign_up.html">Sign Up</a></li>
+        </ul>
+    </nav>
+
 </head>
+
 <body>
     <div> <h1> Sign Up Now!</h1></div>
     <form id="signupForm">
