Sign-in and sign-up page styling improved

--- a/service_reviews.html
+++ b/service_reviews.html
@@ -28,7 +28,7 @@
         
     }
     .header-main {
-    background-color: #a5daee;
+    background-color: #108bb8;
     color: #131313;
     display: flex;
     justify-content: space-between;
@@ -177,10 +177,6 @@
         background: var(--light);
 
     }
-
-
-
-
 </style>
 
 <header class="header-main">
