misalignment of nav bar resolved for pet social subpage

--- a/Pet_Social.html
+++ b/Pet_Social.html
@@ -10,6 +10,7 @@
     <body>
     
     <!-- Defect #1067 - Header Updated across the site-->
+    <!------ Nav Bar updated across the site #791 Tasks:1194 1195-->
 
 <header class="header-main">
     <nav>
@@ -46,7 +47,7 @@
     </header>
 
     <title>Event List</title>
-    <style>
+    <!--<style>
         body {
             font-family: Arial, sans-serif;
         }
@@ -63,15 +64,21 @@
             padding: 10px;
             background-color: #f5f5f5;
         }
-    </style>
+    </style> --> <!------- CSS styling commented (DB) As discussed in meeting with it was creating misalignment in nav bar-->
 </head>
 <body>
-
+<br>
+<br>
+<center><h1>Upcoming Events</h1></center>
+<br>
+<br>
     <!-- Link to the Event Input Page -->
-    <a href="Pet_Social_CreateEvent.html">
+    <center><a href="Pet_Social_CreateEvent.html">
         <button>Create Event</button>
-    </a>
-    <h1>Upcoming Events</h1>
+    </a></center>
+    <br>
+    <br>
+  
 
     
 
