--- a/Pet_Image_GenAI.html
+++ b/Pet_Image_GenAI.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Image Generation</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <!-- Defect #1067 - Header Updated across the site-->
