Adjusted Create Event button

--- a/Pet_Social.html
+++ b/Pet_Social.html
@@ -89,9 +89,9 @@
 </a>
 
     <!-- Link to the Event Input Page -->
-    <center><a href="Pet_Social_CreateEvent.html">
+    <left><a href="Pet_Social_CreateEvent.html">
         <button>Create Event</button>
-    </a></center>
+    </a></left>
     <br>
     <br>
   
