Added Pictures to Pet_Social_MobileVR page

--- a/Pet_Social_MobileVR.html
+++ b/Pet_Social_MobileVR.html
@@ -85,8 +85,8 @@
         function displayPetList() {
             // Replace this with actual pet data fetching logic
             const petData = [
-                { name: "Buddy", type: "Dog", image: "dog1.jpg" },
-                { name: "Whiskers", type: "Cat", image: "cat1.jpg" },
+                { name: "Buddy", type: "Dog", image: "PetVR_1.jpg" },
+                { name: "Whiskers", type: "Dog", image: "PetVR_2.jpg" },
                 // Add more pet data as needed
             ];
 
